Fix collapsable navbar

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -31,6 +31,7 @@ a.nav-link {
 }
 
 
+
 h1, h2, h3, h4, h5, h6, p, .navbar {
   margin: 0;
   font-family: 'roboto_condensedregular', sans-serif;
@@ -40,7 +41,7 @@ p, ol, ul, td {
   font-family: 'roboto_condensedregular', sans-serif;
   font-size: 13px;
   line-height: 18px;
-  margin: 33px;
+/*  margin: 33px;*/
 }
 
 
